...
// MARK: - Constants

extension ConvertorViewModel {
    private enum Constants {
        static let userDefaultsKey = "ExchangeRatesModel"
        static let exchangeRateUpdateTimerInterval: TimeInterval = 60.0
        static let defaultExchangeCurrencies = ["USD", "EUR"]
    }
}

