...
}

// MARK: - Constants

extension ConvertorNetworkManager {
    private enum Constants {
        static let defaultBaseCurrency = "UAH"
        static let defaultRatesApiURL = "https://api.privatbank.ua/p24api/pubinfo?json&exchange&coursid=11"
        static let extraRatesApiURL = "https://api.privatbank.ua/p24api/pubinfo?json&exchange&coursid=12"
    }
}

