...
            static let topOffset: CGFloat = 52.0
            static let height: CGFloat = 44.0
            static let attributedTitle: NSAttributedString = {
                let paragraphStyle = NSMutableParagraphStyle()
                paragraphStyle.alignment = .center
                return NSAttributedString(
                    string: "Add currency",
                    attributes: [
                        .paragraphStyle: paragraphStyle,
                        .foregroundColor: UIColor(red: 0, green: 0.478, blue: 1, alpha: 1),
                        .font: UIFont.latoFont(ofSize: 13.0, weight: .regular),
                    ]
                )
...
